# keyboard

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: key.frag  key.vert  text.frag  text.vert
scripts/: dev-env.ps1  tracker.py
src/: main.cpp
src/config/: Config.cpp  Config.h
src/input/: KeyInjector.cpp  KeyInjector.h  LandmarkReceiver.cpp  LandmarkReceiver.h  MouseInjector.cpp  MouseInjector.h
src/keyboard/: Calibration.h  Calibrator.cpp  Calibrator.h  KeyDetector.cpp  KeyDetector.h  KeyboardLayout.cpp  KeyboardLayout.h  TapDetector.cpp  TapDetector.h
src/mouse/: HandPose.cpp  HandPose.h  MouseController.cpp  MouseController.h  PalmToggle.h  PoseStabilizer.h
src/renderer/: KeyRenderer.cpp  KeyRenderer.h  Renderer.cpp  Renderer.h  ShaderProgram.cpp  ShaderProgram.h  TextRenderer.cpp  TextRenderer.h
src/tracking/: HandTypes.h
src/util/: FileIO.h
src/window/: OverlayWindow.cpp  OverlayWindow.h
tests/: test_calibration.cpp  test_config.cpp  test_hand_pose.cpp  test_key_injector.cpp  test_keyboard_layout.cpp  test_main.cpp  test_mouse_controller.cpp  test_mouse_injector.cpp  test_palm_toggle.cpp  test_pose_stabilizer.cpp  test_tap_detector.cpp
